# Mojo-S3-project

./: .gitignore  Curl.txt  package-lock.json
backend/: .env  Cargo.toml
backend/data/: app.db
backend/src/: main.rs
backend/src/s3_operations/: admin_user.rs  auth.rs  authextractor.rs  background_workers.rs  bucket_handlers.rs  handler_utils.rs  jwt_utils.rs  jwt_validation_utils.rs  metadata.rs  mod.rs  object_handlers.rs  test.rs  user_models.rs
backend/src/s3_operations/index/: compactor.rs  manifest.rs  memtable.rs  mod.rs  sst.rs  types.rs  wal.rs
backend/src/s3_operations/store/: cluster.rs  local.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.tsx  api.ts
frontend/src/components/: BucketFiles.tsx  Buckets.tsx  Dashboard.tsx  Footer.tsx  Layout.tsx  Login.tsx  Navbar.tsx  RecentFiles.tsx  Sidebar.tsx
